Adding a log of vulnerable actions

--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -25,4 +25,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: report
-          path: ${{ GITHUB.STEP_SUMMARY }}
+          path: VulnerableRepos.txt
